tests/e2e/function_without_return_returns_value.story
function my_function k1:int
    return 0
